Fix 1 to text on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -586,7 +586,7 @@ h3 {
     font-size: 34px;
     color: #7d7d7d;
     text-align: center;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .update_chart_range {
